policies/container-with-privilege-escalation-allowed.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: container-with-privilege-escalation-allowed
spec:
  categories:
  - Privileges
  - Security Best Practices
  criteriaLocked: true
  description: Alerts if a deployment has containers with allowPrivilegeEscalation
    set to true in its security context.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on deployment router-default in namespace openshift-ingress
    deployment:
      name: router-default
      scope:
        cluster: ''
        namespace: openshift-ingress
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Container with privilege escalation allowed
  policySections:
  - sectionName: Policy Section 1
    policyGroups:
    - fieldName: Allow Privilege Escalation
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
  rationale: A container process can run with more privileges than its parent process
    if the container's security context has the boolean setting allowPrivilegeEscalation
    enabled. In Kubernetes pods, this setting is true by default. Set the value to
    false if the pod is to run as a non-root user.
  remediation: Verify that privileged escalation is required and cannot be provided
    with a subset of other controls. Disable privilege escalation by setting allowPrivilegeEscalation
    to false.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
